KiCad ChangeLog 2009
====================

Please add newer entries at the top, list the date and your name with
email address.

2009-june-19 UPDATE Jerry Jacobs <jerkejacobs@gmail.com>
================================================================================
Added Hauptmech patch.
I Updated doc to match this patch.

++Pcbnew:
> * Board thickness in the 3D view can be set in *.pcb files (hand edit)
> * Hotkey files bug: incorrect file extension as default in some open/save dialogs.
> * Hotkeys made available for pcbnew [add track] and [add module] tools.
> * Drag and Move hotkeys extended to drag tracks and move nodes/vias when the [add track] tool is active.
> * Show/Hide Invisible Text button added to lefthand menu
> * Dropdown list of clearance history available next to trackwidth history.


2009-june-18 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++Pcbnew:
    Added: in DRC tests: tests for vias min size and tracks min width.
    Added: Option to show the via area while creating a new track.
        Useful in compact designs to know how to place a via during track creation.

2009-june-11 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++Eeschema:
    Added text justification for graphic texts in libedit
    Minor bug 2803506 fixed (error when mirroring bus entries)
    Some code cleaning.
    Better locating algo for arcs in libedit

2009-may-30 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++Eeschema:
    Changes about thickness of lines in draw/plot functions.
    Now there is only one thickness parameter for plot and print.
    This is now the default thickness value,
        used for items that have a line thickness = 0,